--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,12 @@
 name = "STFT"
 uuid = "58bb99bf-048b-48b7-93e7-1cbf3ee61509"
-authors = ["Szymon M. Woźniak"]
-version = "1.0.1"
+authors = ["Szymon M. Woźniak <s@zymon.org>"]
+version = "1.1.0"
 
 [deps]
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
-
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 
 [compat]
-
 FFTW = "1.4"
 julia = "1.6"
